<resources>
    <string name="app_name">任务圈</string>

    <string name="myCompany">我的公司</string>
    <string name="joinedCompany">加入的公司</string>
    <string name="logout">注销</string>
    <string name="addCompany">创建公司</string>
    <string name="member">成员管理</string>
    <string name="addMember">添加成员</string>
    <string name="userInfo">个人中心</string>
    <string name="taskPublish">发布任务</string>
    <string name="timeline">任务圈</string>
    <string name="telephone">手机号</string>
    <string name="getVerify">获取</string>
    <string name="verifyCode">验证码</string>
    <string name="login">登    录</string>
    <string name="login_info">点击-登录，表示同意</string>
    <string name="agreement">《服务协议》</string>
    <string name="input_company_name">请填写公司名称</string>
    <string name="company_name">公司名称</string>
    <string name="remove">移除</string>
    <string name="user_not_exist">该用户不存在!</string>
    <string name="preference">设置</string>
    <string name="change_company">切换公司</string>
    <string name="grade">分  级</string>
    <string name="desc">任务描述</string>
    <string name="s">S</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="insertImage">任务附图</string>
    <string name="executor">执行者</string>
    <string name="supervisor">监督者</string>
    <string name="auditor">审核者</string>
    <string name="deadline">完成期限</string>
    <string name="publishTime">发布时间</string>
    <string name="startTime">开始时间</string>
    <string name="_executor">执行者：</string>
    <string name="_supervisor">监督者：</string>
    <string name="_auditor">审核者：</string>
    <string name="_deadline">完成期限：</string>
    <string name="_publishTime">发布时间：</string>
    <string name="_startTime">开始时间：</string>
    <string name="_companyName">公司名称：</string>
    <string name="_companyCreator">创建者：</string>
    <string name="choose">点此选择</string>
    <string name="publish">发 布</string>
    <string name="nickname">昵称</string>
    <string name="author">Leung_Howell</string>
    <string name="has_publish">发布了</string>
    <string name="grade_task">级任务：</string>
    <string name="task_detail">任务详情任务详情任务详情任务详情任务详情任务详情任务详情任务详情任务详情任务详情任务详情任务详情。</string>
    <string name="time_example">8:50</string>
    <string name="audit">审核</string>
    <string name="comment">评论</string>
    <string name="reply">回复</string>
    <string name="colon">：</string>
    <string name="checkPicture">查看图片</string>
    <string name="send">发送</string>
    <string name="audit_result">审核结果为</string>
    <string name="solved">完美解决</string>
    <string name="complete">普通完成</string>
    <string name="task_failed">任务失败</string>
    <string name="ok">确定</string>
    <string name="loading">正在加载…</string>
    <string name="cant_access_network">啊哦，网络好像抽风了~</string>
    <string name="add_company_background">点此添加公司背景</string>
    <string name="delete">删除</string>
    <string name="tips">提示</string>
    <string name="news_num">条新消息</string>
    <string name="sign">Copyright © 2015&#8211;2015 JIUBAI. All Rights Reserved.</string>
    <string name="sign_short"> © 2015&#8211;2015 JIUBAI. </string>
    <string name="title_under">简洁，不简单</string>
    <string name="version">Version</string>
    <string name="about">关于</string>
    <string name="reconnect">重新连接</string>
    <string name="load_more_news">查看更早的消息...</string>
    <string name="companyInfo">公司信息</string>
</resources>
