<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_item_portrait"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:padding="1.5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/portrait_default" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/clickableText"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_publish"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_item_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/s"
                android:textColor="@color/S"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_task"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/task_detail"
            android:textColor="#212121"
            android:textSize="16sp" />

        <GridView
            android:id="@+id/gv_item_picture"
            android:layout_width="218dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:horizontalSpacing="4dp"
            android:minHeight="70dp"
            android:numColumns="3"
            android:scrollbars="none"
            android:verticalSpacing="4dp" />

        <TextView
            android:id="@+id/tv_executor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/_executor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_supervisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/_supervisor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_auditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/_auditor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/_deadline"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/_startTime"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_publishTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="2dp"
            android:gravity="center_vertical"
            android:text="@string/_publishTime"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sendState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/clickableText"
                android:textSize="14sp"
                android:text="发送中"
                android:visibility="gone"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_item_audit"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button_gray"
                android:text="@string/audit"
                android:textColor="#9e9e9e" />

            <Button
                android:id="@+id/btn_item_comment"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:background="@drawable/round_button_gray"
                android:text="@string/comment"
                android:textColor="#9e9e9e" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_item_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#eeeeee"
            android:divider="#00ffffff"
            android:dividerHeight="0dp"
            android:scrollbars="none" />
    </LinearLayout>

</LinearLayout>