<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_welcome"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.3"
        android:scaleType="fitEnd"
        android:src="@drawable/icon_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#212121"
        android:textSize="23sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:gravity="center_horizontal"
        android:text="@string/title_under"
        android:textColor="#727272"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_reconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_button_white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/reconnect"
        android:textColor="#767676"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/sign_short"
        android:textColor="#808080"
        android:textSize="12sp" />

</LinearLayout>