<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_item_portrait"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:background="#eeeeee"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_item_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname"
                        android:textColor="@color/clickableText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/has_publish"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_grade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/s"
                        android:textColor="@color/S"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grade_task"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_item_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/task_detail"
                    android:textColor="#212121"
                    android:textSize="16sp" />

                <GridView
                    android:id="@+id/gv_item_picture"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:horizontalSpacing="4dp"
                    android:minHeight="70dp"
                    android:numColumns="3"
                    android:scrollbars="none"
                    android:verticalSpacing="4dp" />

                <TextView
                    android:id="@+id/tv_executor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/executor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_supervisor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/supervisor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_auditor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auditor"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_item_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/time_example"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btn_audit"
                        android:layout_width="45dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/round_button_gray"
                        android:text="@string/audit"
                        android:textColor="#9e9e9e" />

                    <Button
                        android:id="@+id/btn_comment"
                        android:layout_width="45dp"
                        android:layout_height="30dp"
                        android:background="@drawable/round_button_gray"
                        android:text="@string/comment"
                        android:textColor="#9e9e9e" />
                </LinearLayout>

                <ListView
                    android:id="@+id/lv_item_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#eeeeee"
                    android:divider="#00ffffff"
                    android:dividerHeight="0dp"
                    android:scrollbars="none" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_comment_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_edittext"
                android:hint="@string/comment"
                android:maxLines="4"
                android:minHeight="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_comment_send"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button_white"
                android:text="@string/send"
                android:textColor="#767676"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_audit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <RadioGroup
                android:id="@+id/rg_audit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:scrollbars="none">

                <RadioButton
                    android:id="@+id/rb_solved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solved"
                    android:textColor="#767676" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <RadioButton
                    android:id="@+id/rb_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete"
                    android:textColor="#767676" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <RadioButton
                    android:id="@+id/rb_failed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_failed"
                    android:textColor="#767676" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_audit_send"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_button_white"
                android:text="@string/ok"
                android:textColor="#767676"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>